app/static/css/default.css
:root {
  --notationColor: #121212;
  --notationBackgroundColor: #eee;
  --invertedColor: #eee;
  --invertedBackgroundColor: #333840;
  --highlightColor: #4e8bed;
  --highlightColorInverted: #1972ff;
}

body {
  font-family: Arial, Helvetica, sans-serif;
  width: 100%;
  height: 100%;
  margin: 0px;
  padding: 0px;
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
  overflow: hidden;
}

a:link {
  text-decoration: none;
  color: #263c5a;
}

a:visited {
  text-decoration: none;
  color: #263c5a;
}

a:hover {
  text-decoration: underline;
}

a:active {
  text-decoration: underline;
}

.header {
  display: flex;
  flex-shrink: 0;
  align-items: center;
  width: 100%;
  justify-content: flex-start;
  /* background-color: Tomato; */
}

.title {
  padding: 3px 20px;
  font-weight: bold;
  font-size: 21px;
}

.orientation button, .orientation {
  padding: 2px;
  font-size: 7pt;
}

.dragOverlay {
  position: fixed;
  display: none;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: 50px;
  border: 5px solid darkblue;
  border-radius: 32px;
  background-color: cornflowerblue;
  background-blend-mode: difference;
  opacity: .7;
  z-index: 200;
}

.dragOverlayText {
  position: absolute;
  top: 50%;
  left: 50%;
  font-size: 50px;
  color: white;
  transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
}

.friendContainer {
  border: 3px solid lightsteelblue;
  border-radius: 4px;
  width: 100%;
}

.notation {
  /* border: 3px solid DodgerBlue;
  border-radius: 4px; */
  overflow: hidden;
  display: flex;
  flex-direction: column;
}

.resizer {
  background-color: lightsteelblue;
}

.encoding {}

/* .CodeMirror {
    border: 1px solid #eee;
    height: auto;
  } */
.footer {
  flex-shrink: 0;
  display: flex;
  align-items: flex-start;
  justify-content: space-between;
  font-size: 8pt;
  color: darkgray;
  width: 100%;
  height: 20px;
  /* background-color: Tomato; */
}

.leftfoot {
  padding: 3px 6px;
  min-width: 180px;
}

.middlefoot {
  /* background-color: Tomato; */
  min-width: 250px;
  min-height: 15px;
  width: 700px;
  padding: 0px;
  border: 1px solid #cbd5e0;
  border-radius: 4px;
  margin: 2px;
  text-align: center;
  position: relative;
}

.statusbar {
  width: 100%;
  height: 100%;
  position: absolute;
  top: 1px;
  /* corresponds to middlefoot margin */
  left: 0px;
  z-index: 10;
}

.progressbar {
  width: 0%;
  height: 100%;
  background-color: lavender;
  opacity: .8;
  position: absolute;
  top: 0px;
  left: 0px;
}

.rightfoot {
  padding: 3px 6px;
  min-width: 180px;
}

.control-menu {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  font-size: 10pt;
  color: black;
  width: 100%;
  height: 28px;
  background-color: ghostwhite;
  padding: 1px;
  margin: 0px;
}

.controls {
  display: flex;
  align-items: center;
  min-height: 26px;
  border: 1px solid darkgray;
  border-radius: 7px;
  margin: 0px 3px;
}

.btn {
  margin: 2px;
  border: 1px solid gainsboro;
  border-radius: 4px;
  /* font-size: 10px; */
  line-height: 1.5em;
  padding: 0 2px;
  min-height: 21px;
  min-width: 21px;
  max-height: 21px;
  background-color: #ffffff;
}

.label {
  margin-top: 2px;
  margin-right: 3px;
  margin-left: 3px;
  display: inline;
  line-height: 1.5em;
  padding: 0 2px;
  min-height: 21px;
  min-width: 21px;
  white-space: nowrap;
}

.inline-block-tight {
  display: inline-block;
  vertical-align: middle;
}

.input-range {
  height: 4px;
  border-radius: 3px;
  background-color: #d5d5d5;
}

.checkbox {
  margin-right: 4px;
}

#version-div {
  float: right;
}

/* TOOLTIPs
TODO: make tooltips appear depending on orientation...
https://www.w3schools.com/css/css_tooltip.asp
*/
.tooltip {
  position: relative;
  display: inline-block;
}

.tooltip .tooltiptext {
  visibility: hidden;
  position: relative;
  width: 120px;
  background-color: #555;
  color: #fff;
  text-align: center;
  line-height: 1.1em;
  border-radius: 6px;
  padding: 5px;
  position: absolute;
  z-index: 110;
  top: 125%;
  left: 50%;
  margin-left: -60px;
  opacity: 0;
  transition: opacity 0.3s;
}

.tooltip .tooltiptext::after {
  content: "";
  position: absolute;
  bottom: 100%;
  left: 50%;
  margin-left: -5px;
  border-width: 5px;
  border-style: solid;
  border-color: transparent transparent #555 transparent;
}

.tooltip:hover .tooltiptext {
  visibility: visible;
  opacity: 1;
}

.tooltiptext.visible {
  visibility: visible;
  opacity: 1;
}

.verovio-panel {
  /* padding: 1rem 2rem 3rem 1rem; */
  display: block;
  padding: 0px;
  overflow: scroll;
  width: 100%;
  height: 100%;
  text-align: center;
  z-index: 9;
  background-color: var(--notationBackgroundColor);
}

.verovio-panel g:not(.highlighted) {
  fill: var(--notationColor);
  color: var(--notationColor);
  stroke: var(--notationColor);
}

.verovio-panel g.inverted {
  fill: var(--invertedColor);
  color: var(--invertedColor);
  stroke: var(--invertedColor);
}

.verovio-panel g.highlighted {
  fill: var(--highlightColor);
  color: var(--highlightColor);
  stroke: var(--highlightColor);
}

.verovio-panel g.highlighted.inverted {
  fill: var(--highlightColorInverted);
  color: var(--highlightColorInverted);
  stroke: var(--highlightColorInverted);
}

.verovio-panel.inverted {
  background-color: var(--invertedBackgroundColor);
}

.hidden {
  display: none;
}

.help-container {
  overflow: auto;
  border: 3px solid lightsteelblue;
  border-radius: 4px;
  margin: 5px;
  padding: 5px;
}

.help-container td {
  min-width: 150px;
  padding: 3px;
}

.help-container tr:nth-child(odd) {
  background: lightgrey
}

span.keyIcon {
  margin: 3px 3px;
  padding: 0px 5px;
  border-style: solid;
  border-color: DodgerBlue;
  border-width: 2px;
  border-radius: 3px;
}

.column {
  float: left;
  padding: 3px;
  width: 48%;
}

/* Clear floats after the columns */
.help-container:after {
  content: "";
  display: table;
  clear: both;
}

/* CodeMirror fold gutter css styles */
.CodeMirror-foldmarker {
  font-family: arial;
  cursor: pointer;
}

.CodeMirror-foldgutter {
  width: .7em;
}

.CodeMirror-foldgutter-open,
.CodeMirror-foldgutter-folded {
  color: #555;
  cursor: pointer;
}

.CodeMirror-foldgutter-open:after {
  content: "\25BE";
}

.CodeMirror-foldgutter-folded:after {
  content: "\25B8";
}

